# tlu-gear

./: .clang-format  .config  .gitignore  CMakeLists.txt  Makefile  cflags.mk  libtest.sh  main.c  test.c  test_libmem.mk
.old/: CMakeLists.txt
.old/language/: CMakeLists.txt  TLUlanguage.h
.old/language/TLUlib/inc/: TLUformat.h  TLUmemory.h
.old/language/inc/: TLUbuiltin.h  TLUoperators.h
.old/language/src/: TLUbuiltin.c  TLUglobals.c
.old/src/: TLUbzero.c  TLUisdigit.c
.old/test/: test.h
bench/: Makefile  func_bench.c
buildsystem/: bench-libc-generic-native.mk  bench-libc.mk  build.mk  common.mk  libbench.mk  libc-generic-native.mk  libcgn.mk  libcore.mk  libio.mk  libsyscall.mk  libutest.mk  utest-io.mk  utest-libc-generic-native.mk  utest-libc.mk
core/: Makefile  panic.c
inc/: libTLU.h
language/: .gitignore  CMakeLists.txt  Makefile  TLUlanguage.h  language.h  main.c  test.c
language/TLUlib/: TLUlib.h
language/TLUlib/inc/: TLUdefs.h  TLUinstd.h  TLUlexical.h  TLUmemory.h  TLUnistd.h  TLUstring.h
language/TLUlib/src/: TLUinstd.c  TLUlexical.c  TLUmemory.c  TLUnistd.c  TLUstring.c
language/inc/: TLUbuiltin.h  TLUdefs.h  TLUexception.h  TLUnum.h  TLUobject.h  TLUobjstack.h  TLUoperators.h  TLUstr.h  TLUtypeid.h
language/src/: TLUbuiltin.c  TLUnum.c  TLUobjstack.c  TLUoperators.c  TLUstr.c
libc/: Makefile  README.md  find_src.sh
old/: Makefile
src/: TLUmemset.c  TLUmemset16.c  TLUmemset_xmm.c
test/: color.h  test.h  test.h.gch  test_all_issmth.c  test_all_memset.c  test_memset.c  test_runner.py
unittest/: unittest.h
(+269 files in other folders)
